Add main layout structure

--- a/index.html
+++ b/index.html
@@ -1,15 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
+		<title>Document</title>
+	</head>
 
-<body>
-
-</body>
-
+	<body>
+		<div class="container">
+			<header class="header">
+				<div class="header__title"></div>
+				<div class="header__description"></div>
+			</header>
+			<main class="main">
+				<section class="main__row--first">
+					<div class="image-container">
+						<img src="photo1.png" alt="photo1" />
+						<p>Devel</p>
+						<h4>Bill Mahoney</h4>
+					</div>
+					<div class="image-container image-container--down">
+						<img src="photo2.png" alt="photo2" />
+					</div>
+					<div class="image-container">
+						<img src="photo3.png" alt="photo3" />
+					</div>
+				</section>
+				<section class="main__row--second">
+					<div class="image-container">
+						<img src="photo4.png" alt="photo4" />
+					</div>
+					<div class="image-container image-container--down">
+						<img src="photo5.png" alt="photo5" />
+					</div>
+					<div class="image-container">
+						<img src="photo6.png" alt="photo6" />
+					</div>
+				</section>
+			</main>
+			<footer class="footer">created by aldorea - devChallenges.io</footer>
+		</div>
+	</body>
 </html>
